# cone-detection

./: CMakeLists.txt  README.md
src/: ConeDetection.cpp  ConeDetection.h  main.cpp
